// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account should render correctly 1`] = `
<div
  className="wallet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h2>
    Settings
  </h2>
  <p>
    <strong>
      It is highly recommended to download a backup of your wallet. You can import this into

      <a
        href="https://mycrypto.com/"
        target="_blank"
      >
        MyCrypto.com
      </a>

      or Parity.
    </strong>
  </p>
  <div
    className="wallet__link"
  >
    <Link
      href="/wallet/download"
      size="medium"
      style="secondary"
    >
      Download wallet backup JSON
    </Link>
  </div>
  <hr />
  <p>
    <strong>
       [IMPORTANT] - Please read carefully
    </strong>

  </p>
  <p>
    Careful, below actions have
    <strong>
       irreversible
    </strong>

    effects. If you do not have a backup of the mnemonic phrase that generated your current address,
    <strong>

      you will never be able to access your current wallet again

    </strong>

    after performing one of the below actions.
  </p>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/generate"
      size="medium"
      style="danger"
    >
      Create a new wallet
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/restore"
      size="medium"
      style="danger"
    >
      Restore from mnemonic
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/import"
      size="medium"
      style="danger"
    >
      Import wallet JSON
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Button
      onClick={[Function]}
      style="danger"
    >
      Delete wallet
    </Button>
  </div>
</div>
`;

exports[`Account should render correctly without associatedFund 1`] = `
<div
  className="wallet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h2>
    Settings
  </h2>
  <p>
    <strong>
      It is highly recommended to download a backup of your wallet. You can import this into

      <a
        href="https://mycrypto.com/"
        target="_blank"
      >
        MyCrypto.com
      </a>

      or Parity.
    </strong>
  </p>
  <div
    className="wallet__link"
  >
    <Link
      href="/wallet/download"
      size="medium"
      style="secondary"
    >
      Download wallet backup JSON
    </Link>
  </div>
  <hr />
  <p>
    <strong>
       [IMPORTANT] - Please read carefully
    </strong>

  </p>
  <p>
    Careful, below actions have
    <strong>
       irreversible
    </strong>

    effects. If you do not have a backup of the mnemonic phrase that generated your current address,
    <strong>

      you will never be able to access your current wallet again

    </strong>

    after performing one of the below actions.
  </p>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/generate"
      size="medium"
      style="danger"
    >
      Create a new wallet
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/restore"
      size="medium"
      style="danger"
    >
      Restore from mnemonic
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/import"
      size="medium"
      style="danger"
    >
      Import wallet JSON
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Button
      onClick={[Function]}
      style="danger"
    >
      Delete wallet
    </Button>
  </div>
</div>
`;

exports[`Account should render correctly without currentAddress 1`] = `
<div
  className="wallet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/generate"
      size="medium"
      style="primary"
    >
      Create a new wallet
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/restore"
      size="medium"
      style="primary"
    >
      Restore from mnemonic
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/import"
      size="medium"
      style="primary"
    >
      Import wallet JSON
    </Link>
  </div>
</div>
`;

exports[`Account should render correctly without networkId 1`] = `
<div
  className="wallet"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <h2>
    Settings
  </h2>
  <p>
    <strong>
      It is highly recommended to download a backup of your wallet. You can import this into

      <a
        href="https://mycrypto.com/"
        target="_blank"
      >
        MyCrypto.com
      </a>

      or Parity.
    </strong>
  </p>
  <div
    className="wallet__link"
  >
    <Link
      href="/wallet/download"
      size="medium"
      style="secondary"
    >
      Download wallet backup JSON
    </Link>
  </div>
  <hr />
  <p>
    <strong>
       [IMPORTANT] - Please read carefully
    </strong>

  </p>
  <p>
    Careful, below actions have
    <strong>
       irreversible
    </strong>

    effects. If you do not have a backup of the mnemonic phrase that generated your current address,
    <strong>

      you will never be able to access your current wallet again

    </strong>

    after performing one of the below actions.
  </p>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/generate"
      size="medium"
      style="danger"
    >
      Create a new wallet
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/restore"
      size="medium"
      style="danger"
    >
      Restore from mnemonic
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Link
      href="/wallet/import"
      size="medium"
      style="danger"
    >
      Import wallet JSON
    </Link>
  </div>
  <div
    className="wallet__button"
  >
    <Button
      onClick={[Function]}
      style="danger"
    >
      Delete wallet
    </Button>
  </div>
</div>
`;
